# Agents-Memory-System

./: .axe-linter.yml  .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  docker-compose.dev.yml  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/: deps.py
backend/app/clients/: openai_embedding.py  redis_client.py  sso_client.py
backend/app/config/: model_prices.yaml
backend/app/core/: access.py  blocked_features.py  config.py  database.py  datetime.py  exceptions.py  logging_config.py  pagination.py  queue_keys.py  rate_limit.py  redis.py  response.py  security.py  text_utils.py
backend/app/models/: __init__.py  agent.py  agent_language.py  agent_template.py  agentic_skill_suggestion.py  base.py  chat_attachment.py  chat_memory.py  chat_message.py  chat_project.py  chat_session.py  download_log.py  entity_tag.py  llm_call_log.py  llm_model.py  project_memory.py  script.py  session_agent.py  skill.py  skill_embedding.py  skill_search_log.py  system_setting.py  tag.py  user.py  user_favorite.py  user_memory.py
backend/app/repositories/: agent_language_repository.py  agent_repository.py  agent_template_repository.py  agentic_skill_suggestion_repository.py  chat_attachment_repository.py  chat_memory_repository.py  chat_message_repository.py  chat_project_repository.py  chat_session_repository.py  download_log_repository.py  entity_tag_repository.py  llm_call_log_repository.py  llm_model_repository.py  (+11 more)
backend/scripts/: backfill_skill_embedding.py  migrate_storage_to_s3.py
backend/tests/: conftest.py
(+358 files in other folders)
