[project]
name = "agents-memory-system"
version = "1.0.0"
description = "Agents 記憶管理系統後端"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "redis>=5.0",
    "bcrypt>=4.0",
    "python-jose[cryptography]>=3.3",
    "httpx>=0.28",
    "python-multipart>=0.0.18",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "respx>=0.22",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"
